<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/navyblue"
    tools:context=".ui.AboutUs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_500"
            android:text="About Us"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developed &amp; Owned By:"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/developedBy"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_600"
            tools:text="Bangladesh Ltd."
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

    </RelativeLayout>
    <RelativeLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_400"
            android:textColor="@color/white"
            android:text="App Version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/poppins_400"
            android:textColor="@color/white"
            android:text="@string/v_1_0_2" />

        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:fontFamily="@font/poppins_500"
            android:textColor="@color/white"
            />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/lorem"
           android:layout_marginTop="@dimen/_16sdp"
           android:textColor="@color/white"
           />

       <RelativeLayout
           android:layout_marginTop="@dimen/_20sdp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/textview4"
               android:textColor="@color/white"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/poppins_400"
               android:text="@string/email" />

           <TextView
               android:id="@+id/emailtxt"
               android:textColor="@color/white"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:text="google@gmail.com" />

       </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_400"
                android:text="@string/copyright" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/poppins_500"
                android:text="CCN Infotech Ltd."
                android:textColor="@color/white" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>