<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/navyblue"
    android:id="@+id/drawerLayout"
    android:orientation="vertical"
    tools:context=".ui.SearchByDate">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/btnDrawer"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:src="@drawable/menuicon"
            android:padding="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:tint="@color/white" />

        <RelativeLayout

            android:id="@+id/btnSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/searchbg"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_300"
                android:text="Select Date"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_calender" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchbyDateRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            tools:itemCount="5"
            tools:listitem="@layout/item_weather"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"

            />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/navyblue"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_sunrise" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_600"
                    android:text="Weather Update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/btnSubscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_subscription"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="Upgrade To Premium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/btnLoginLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/loginOrLogoutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/btnFindMyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_my_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/find_my_location"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/btnSearchByDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_calender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/search_by_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSearchByLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_location"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/search_by_location"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="#3BFFFFFF"/>

            <RelativeLayout
                android:id="@+id/btnWeatherFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/weather_format"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />


                <TextView
                    android:id="@+id/temperatureFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="°C"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/nav_background"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">


                <!-- <TextView
                     android:id="@+id/btnHelp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_8sdp"
                     android:fontFamily="@font/poppins_400"
                     android:text="@string/help"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/_12ssp" />-->

                <TextView
                    android:id="@+id/btnAboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="@string/about_us"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />  <TextView
                android:id="@+id/btnTermsCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_400"
                android:text="Terms &amp; Conditions"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/btnPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="Privacy Policy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/btnRefundPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_400"
                    android:text="Refund Policy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>


            <TextView
                android:id="@+id/btnVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28sdp"
                android:fontFamily="@font/poppins_400"
                android:text="@string/v_1_0_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>